# lesinki-wallet

./: .gitignore  FINAL_TRANSFER_PACKAGE.md  GITHUB_SETUP.md  GITHUB_TRANSFER_AUDIT.md  INSTALL.md  README.md  README_GITHUB_SETUP.md  package.json  tsconfig.json  webpack.config.js
.github/workflows/: auto-fix.yml  ci.yml  release.yml
src/: App.tsx  index.html  styles.css
src-tauri/: Cargo.toml  build.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  monitoring.rs  performance.rs  performance_tests.rs  pumpfun_bundler.rs  security.rs  security_tests.rs
src/components/: AddressBook.tsx  CreateWallet.tsx  DappBrowser.tsx  ExportWallet.tsx  ImportWallet.tsx  NFTGallery.tsx  PortfolioDashboard.tsx  PumpfunBundler.tsx  SecuritySettings.tsx  StakingInterface.tsx  SwapInterface.tsx  Toast.tsx  TransactionHistory.tsx  TransferTokens.tsx  WalletList.tsx
src/i18n/: index  index.ts
temp-repo/: LICENSE  README.md
