[package]
name = "lesinki-wallet"
version = "1.0.0"
description = "Lesinki Wallet - Professional Solana Wallet"
authors = ["lesinki toolz"]
license = "MIT"
repository = "https://github.com/lesinkitoolz/lesinki-wallet"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
# Core dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"

# Solana dependencies
solana-sdk = "1.18"
solana-client = "1.18"
solana-account-decoder = "1.18"
solana-program = "1.18"
bip39 = "2.0"
spl-token = "4.0"
spl-associated-token-account = "2.3"
spl-memo = "4.0"
hex = "0.4"
mpl-token-metadata = "3.2"
borsh = "0.10"

# Security and crypto
aes-gcm = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
scrypt = "0.8"
rand = "0.8"
rand_distr = "0.4"
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
zeroize = "1.3"

# Networking and HTTP
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = "0.1"
futures = "0.3"

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization and encoding
bincode = "1.3"
base64 = "0.21"
bech32 = "0.2"

# Error handling and utilities
crossbeam = "0.8"
once_cell = "1.19"
lazy_static = "1.4"
dashmap = "5.5"

# Caching
moka = { version = "0.12", features = ["sync"] }
instant = "0.1"

[dev-dependencies]
# Testing dependencies
tempfile = "3.10"
pretty_assertions = "1.4"
wiremock = "0.6"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"

[features]
# Enable all default Tauri features
default = ["tauri/default"]

# Development features
devtools = ["tauri/devtools"]
